--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>JS Fundamentals</h1>
-    <script src="var.js"></script>
+    <button id="btn">submit</button>
+    
+    <script src="this.js"></script>
 </body>
 </html>
