--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <h1>JS Fundamentals</h1>
     <button id="btn">submit</button>
     
-    <script src="this.js"></script>
+
+    <p id="help">Helpful notes will appear here</p>
+    <p>Email: <input type="text" id="email" name="email" /></p>
+    <p>Name: <input type="text" id="name" name="name" /></p>
+    <p>Age: <input type="text" id="age" name="age" /></p>
+
+    <script src="closure.js"></script>
 </body>
 </html>
